[gd_scene load_steps=5 format=3 uid="uid://bagkri8f5pwal"]

[ext_resource type="Script" path="res://PowerUps/PowerUpManager.gd" id="1_p5g2t"]

[sub_resource type="Animation" id="Animation_26h58"]
resource_name = "PowerUpCardAnimation"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(192, 160), Vector2(192, 190), Vector2(192, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(320, 180), Vector2(320, 150), Vector2(320, 180)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Card3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(448, 160), Vector2(448, 190), Vector2(448, 160)]
}

[sub_resource type="Animation" id="Animation_iyq64"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(192, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 180)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Card3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(448, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grrb7"]
_data = {
"PowerUpCardAnimation": SubResource("Animation_26h58"),
"RESET": SubResource("Animation_iyq64")
}

[node name="PowerUpManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p5g2t")

[node name="CardAnimations" type="AnimationPlayer" parent="."]
autoplay = "PowerUpCardAnimation"
libraries = {
"": SubResource("AnimationLibrary_grrb7")
}

[node name="Card1" type="Control" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -20.0
offset_right = 192.0
offset_bottom = -20.0
grow_vertical = 2
mouse_filter = 1

[node name="Card2" type="Control" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Card3" type="Control" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -20.0
offset_right = -192.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
